feat: project base

--- a/package.json
+++ b/package.json
@@ -11,6 +11,11 @@
     "format": "prettier --write \"apps/**/*.ts\" \"libs/**/*.ts\"",
     "start": "nest start",
     "start:dev": "nest start --watch",
+    "task-db-run": "docker-compose -f ./docker/db/tasks/docker-compose.yml --env-file .env up",
+    "task": "nest start --watch tasks",
+    "task-db-pull": "npx prisma db pull --schema ./apps/tasks/schema.prisma",
+    "task-db-generate": "npx prisma generate --schema ./apps/tasks/schema.prisma",
+    "task-studio": "npx prisma studio --schema ./apps/tasks/schema.prisma",
     "start:debug": "nest start --debug --watch",
     "start:prod": "node dist/main",
     "lint": "eslint \"{src,apps,libs,test}/**/*.ts\" --fix",
@@ -19,17 +24,30 @@
     "test:cov": "jest --coverage",
     "test:debug": "node --inspect-brk -r tsconfig-paths/register -r ts-node/register node_modules/.bin/jest --runInBand",
     "test:e2e": "jest --config ./apps/simple-kambam/test/jest-e2e.json",
-    "up-task-db": "docker-compose -f .\\docker\\db\\tasks\\docker-compose.yml --env-file .env up"
+    "scripts": "echo 'prebuild\nbuild\nformat\nstart\nstart:dev\ntask-db-run\ntask\ntask-db-pull\ntask-db-generate\ntask-studio\nstart:debug\nstart:prod\nlint\ntest\ntest:watch\ntest:cov\ntest:debug\ntest:e2e\nscripts'"
   },
   "dependencies": {
+    "@apollo/federation": "^0.36.1",
+    "@apollo/subgraph": "^2.0.5",
+    "@nestjs/apollo": "^10.0.14",
     "@nestjs/common": "^8.0.0",
     "@nestjs/core": "^8.0.0",
+    "@nestjs/graphql": "^10.0.15",
+    "@nestjs/microservices": "^8.4.7",
     "@nestjs/platform-express": "^8.0.0",
+    "@prisma/client": "^3.15.1",
+    "apollo-server-express": "^3.9.0",
+    "dotenv": "^16.0.1",
+    "express": "^4.18.1",
+    "graphql": "^16.5.0",
+    "kafkajs": "^2.0.2",
     "reflect-metadata": "^0.1.13",
     "rimraf": "^3.0.2",
-    "rxjs": "^7.2.0"
+    "rxjs": "^7.2.0",
+    "webpack": "^5.73.0"
   },
   "devDependencies": {
+    "@faker-js/faker": "^7.2.0",
     "@nestjs/cli": "^8.0.0",
     "@nestjs/schematics": "^8.0.0",
     "@nestjs/testing": "^8.0.0",
